--- a/custom_components/cellar_tracker/manifest.json
+++ b/custom_components/cellar_tracker/manifest.json
@@ -1,11 +1,11 @@
 {
   "domain": "cellar_tracker",
   "name": "CellarTracker",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "documentation": "https://github.com/GuvHas/cellar_tracker",
   "requirements": ["cellartracker"],
   "config_flow": true,
   "dependencies": [],
   "codeowners": ["@GuvHas"],
-  "iot_class": "cloud_polling"
+  "iot_class": "cloud_poll"
 }
